# simply-wayland-rs

./: Cargo.toml  README.md  build.rs  get_defines.sh  get_include_paths.sh  output.h.gch  paths_to_contents.sh  pipe.sh  wrapper.h
pregen/: bindings.rs  constants.rs
src/: helpers.rs  lib.rs  types.rs
