[package]
name = "simply_wayland"
version = "0.1.7"
authors = ["Sawyer Bergeron <sawyerbergeron@gmail.com>"]
edition = "2018"
description = "Rust bindings for Wayland. Not recommended for general use, likely unidiomatic"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.52.0"
#regex = "1"
onig = "4.3"
cc = "1.0"
